feat: add device io routes
